[package]
name                    = "dmcaction"
description             = "Strip audio tracks from recordings."
version                 = "0.0.0"
edition                 = "2021"
license                 = "AGPL-3.0-only"
repository              = "https://github.com/cosmicexplorer/dmcaction"
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type              = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto                     = true

[features]
default                 = ["wee_alloc", "console_error_panic_hook"]

[build-dependencies]
cc = "1.0.79"

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's optional.
console_error_panic_hook = { version = "0.1.5", optional = true }
# ffmpeg = { git = "https://github.com/cosmicexplorer/ffmpeg-rs", rev = "add465b6136e800b6236ad278b33cee80580d4b1", features = ["wasm"] }
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen            = "0.2.45"
wav = "1"
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc               = { version = "0.4.2", optional = true }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version                 = "0.3.22"
features                = ["console"]

[dependencies.cpal]
version                 = "0.13.5"
features                = ["wasm-bindgen"]

[dependencies.symphonia]
version                 = "0.5"
features                = ["isomp4", "mkv", "ogg", "wav", "aac", "alac", "flac", "mp3", "pcm", "vorbis"]
